Fix icon spacing

--- a/src/AppBar/app-bar.less
+++ b/src/AppBar/app-bar.less
@@ -201,7 +201,8 @@
     }
 }
 
-[class^="icon-"].app-nav-icon {
+[class^="icon-"].app-nav-icon,
+.tui-icon.app-nav-icon {
   position: relative;
   top: 2px;
   display: inline-block;
